
  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-563 hcat script should look in the correct dir for the storage handler jars (arpitgupta via khorgath)

  HCAT-559 Fix trivial build warnings in HCat trunk (mithunr via avandana)

  HCAT-555 hcat script should look for hcatalog-core jar and add HCAT_PREFIX/conf as a config location that is checked. (arpitgupta via traviscrawford)

  HCAT-534 HCat_Drop_Table_3 dfs mkdir failing on hadoop23 (cdrome via toffer)

  HCAT-453 HCatalog queries fail due to exceeding max jobconf size (pengfeng via traviscrawford)

  HCAT-523 PigHCatUtil should not assume map key type can be casted to String (pengfeng via traviscrawford)

  HCAT-522 Make HCatHadoopShims.commitJob() generic (traviscrawford)

  HCAT-451 Partitions are created even when Jobs are aborted (avandana)

  HCAT-513  Data Store onto HCatalog table fails for dynamic partitioning as the temporary directory gets deleted by the completed map tasks  (amalakar via toffer)

  HCAT-497 HCatContext should use the jobconf instead of its own conf (traviscrawford)

  HCAT-494 MultiOutputFormat in 0.23 fails to setAliasConf() correctly. (mithun via toffer)

  HCAT-507 e2e harness failing on 0.23 (toffer)

  HCAT-502 HCatalog dependency resolution fails due to missing repo (traviscrawford)

  HCAT-490 HCatStorer() throws error when the same partition key is present in records in more than one tasks running as part of the same job (amalakar via traviscrawford)

  HCAT-499 Multiple store commands does not work with Hadoop23 (rohinip via avandana)

  HCAT-501 HBase storage handler tests failing in trunk (traviscrawford)

  HCAT-498 TestNotificationListener failing in trunk (traviscrawford)
